# lj-k2

./: Cargo.toml  README.md
libs/grandma2/: Cargo.toml
libs/grandma2/src/: client.rs  error.rs  interface.rs  interface_msg.rs  item.rs  lib.rs  messages.rs
libs/grandma2/src/client/: client.rs  messages.rs  mod.rs  serde.rs
libs/grandma2/src/interface/: messages.rs  mod.rs
libs/grandma2/src/ma2_msg/: items.rs  messages.rs  mod.rs
libs/grandma2/src/types/: executor.rs  executor_data.rs  executor_range.rs  mod.rs
libs/midi_parse/: Cargo.toml
libs/midi_parse/src/: consts.rs  lib.rs  message.rs  tests.rs  types.rs
src/: main.rs
src/frontend/: client.rs  data.rs  messages.rs  mod.rs  presets.rs  server.rs  tests.rs
src/midi/: connection.rs  input.rs  interface.rs  mod.rs  output.rs
