[package]
name = "lj-k2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grandma2 = {path = "./libs/grandma2"}
midir = "0.9.1"
midi_parse = {path = "./libs/midi_parse"}
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tungstenite = "0.23.0"
tokio = { version = "1.36.0", features = ["full"] }
futures-util = { version = "0.3.30", features = ["sink"] }
tokio-tungstenite = { version = "0.23.1", features = ["handshake"] }
reqwest = "0.11.24"
