[package]
name = "grandma2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
futures-util = { version = "0.3.30", features = ["sink"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = "1.36.0"
tokio-tungstenite = "0.23.1"
tungstenite = "0.23.0"
url = "2.5.0"
